continued work on mobile design, need to fix filterbar dark mode

--- a/src/app.scss
+++ b/src/app.scss
@@ -70,7 +70,7 @@
         }
     }
 
-    .filterbar{
+    .filterbar,.filterbar-desktop,.filterbar-mobile-split{
         background-color: $very-dark-desaturated-blue;
 
         h4:hover{
@@ -85,7 +85,6 @@
     .App{
         min-width: 100vw;
         min-height: 100vh;
-
     }
     
  }
