--- a/src/containers/AppContainer/app-container.scss
+++ b/src/containers/AppContainer/app-container.scss
@@ -22,10 +22,10 @@
 
 @media(max-width: 600px){
     .app-container{
-        min-width: 15rem;
+        min-width: 18.5rem;
         max-width: 87%;
-        // background-color: red;
         top: 2.5rem;
+        box-shadow: 0 0 0 0, 0 0 0 0;
 
         .app-container-todos{
             margin-top: 0.9rem;
